Class Method actionPerformed() & setCSVExportProperties() textMaxCharsSpinner Set Value via valueOf() Instead of Creating a new Double().