@@ -9,7 +9,7 @@
 //
 //=================================================================
 // Copyright (C) 2005-2010 Dana M. Proctor
-// Version 4.5 03/08/2010
+// Version 4.6 05/18/2010
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -88,7 +88,10 @@
 //         4.4 02/18/2010 Changed Package to Reflect Dandy Made Productions Code.
 //         4.5 03/08/2010 Implementation of Internationalization via Class Instance
 //                        resourceBundle. Argument Added to Constructor. Added Arguments
-//                        to Method createTextOptionPanel() & createDelimiterPanel(). 
+//                        to Method createTextOptionPanel() & createDelimiterPanel().
+//         4.6 05/18/2010 Class Method actionPerformed() & setCSVExportProperites() 
+//                        textMaxCharsSpinner Set Value via valueOf() Instead of
+//                        Creating a new Double(). 
 //
 //-----------------------------------------------------------------
 //                 danap@dandymadeproductions.com
@@ -112,7 +115,7 @@ import javax.swing.event.ChangeListener;
  * options.
  * 
  * @author Dana M. Proctor
- * @version 4.5 03/08/2010
+ * @version 4.6 05/18/2010
  */
 
 class CSVExportPreferencesPanel extends JPanel implements ActionListener, ChangeListener
@@ -247,7 +250,7 @@ class CSVExportPreferencesPanel extends JPanel implements ActionListener, Change
          if (formSource == restoreDefaultsButton)
          {
             includeTextCheckBox.setSelected(false);
-            textMaxCharsSpinner.setValue(new Integer(defaultCharsInclude));
+            textMaxCharsSpinner.setValue(Integer.valueOf(defaultCharsInclude));
             textMaxCharsSpinner.setEnabled(false);
             commaRadioButton.setSelected(true);
             otherTextField.setEnabled(false);
@@ -550,7 +553,7 @@ class CSVExportPreferencesPanel extends JPanel implements ActionListener, Change
       if (includeTextCheckBox.isSelected())
          textMaxCharsSpinner.setEnabled(true);
 
-      textMaxCharsSpinner.setValue(new Integer(dataProperties.getTextCharsNumber()));
+      textMaxCharsSpinner.setValue(Integer.valueOf(dataProperties.getTextCharsNumber()));
 
       // Delimiter
       if (dataProperties.getDataDelimiter().equals("\t"))
